--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,18 +10,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-    google_generative_ai: ^0.4.6
-    flutter_markdown: ^0.7.4+1
-    uuid: ^4.4.2
-    provider: ^6.1.2
-    path_provider: ^2.1.5
-    hive: ^2.2.3
-    hive_flutter: ^1.1.0
-    flutter_spinkit: ^5.2.1
-    image_picker: ^1.1.2
-
-
-
+  google_generative_ai: ^0.4.6
+  flutter_markdown: ^0.7.4+1
+  uuid: ^4.4.2
+  provider: ^6.1.2
+  path_provider: ^2.1.5
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  flutter_spinkit: ^5.2.1
+  image_picker: ^1.1.2
+  flutter_dotenv: ^5.1.0
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
