modify api and add the utility from video

--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,9 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+/lib/api/api-service.dart
 
 
 
-**/lib/api/api-service.dart
+.env
+.lib/api
